# diskspacetool

./: CMakeLists.txt  aboutdialog.ui  aligndelegate.cpp  aligndelegate.h  applicationstate.cpp  applicationstate.h  choosedirectoryform.cpp  choosedirectoryform.h  directorychooserform.cpp  directorychooserform.h  guard.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resultsform.cpp  resultsform.h  scanentrymodel.cpp  scanentrymodel.h  scanform.cpp  scanform.h  scanner.cpp  scanner.h  startscanform.cpp  startscanform.h  startscanform.ui  toast.h  util.cpp  util.h
